# Command-Interpreter

./: .gitignore  CMakeLists.txt  Propulsion_2024.sln  README.md  UnitTesting.h
Propulsion_2024/: CMakeLists.txt  Command.h  Command_Interpreter.cpp  Command_Interpreter.h  Main.cpp  Propulsion_2024.vcxproj  Propulsion_2024.vcxproj.filters  README.md  ThrusterControler.cpp  ThrusterController.cpp  ThrusterController.h  Thruster_Commander.cpp  Thruster_Commander.h  UnitTesting.h  command.h
Propulsion_2024/data/: config1.yaml
Propulsion_2024/lib/: Command.h  Command_Interpreter.cpp  Command_Interpreter.h  Main.cpp  Thruster_Commander.cpp  Thruster_Commander.h
Propulsion_2024/testing/: Command_Interpreter_Testing.cpp  Parser.h  Thruster_Commander_Testing.cpp
artwork/: ACII-Gen-Art.txt  ASCII-Hand-Art.txt
data/: 14V_Correlation.csv
lib/: Command.h  Command_Interpreter.cpp  Command_Interpreter.h  LQR_Control.h  Main.cpp  Mock_GPIO.cpp  Mock_GPIO.h  Physics.cpp  Physics.h  Relative_Path_fix.h  Serial.cpp  Serial.h  Thruster_Commander.cpp  Thruster_Commander.h  Wiring.cpp  Wiring.h
pi/: CMakeLists.txt
testing/: Command_Interpreter_Testing.cpp  Parser.h  Physics_Testing.cpp  Thruster_Commander_Testing.cpp
